MDEV-18298 Crashes server with segfault during role grants

it was supposed to be `*(p-1)` not `*p-1`
(the crash happens if `*p==0`)